--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
     </section>
     <section class="bonus-container">
-        
+       <section class="chrono" id="chrono">
+           <button onclick='start'>Bonus 30 seconde</button>
+       </section> 
     </section>
+    <script src='script.js'></script>
 </body>
 </html>
