--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </section>
     <section class="bonus-container">
        <section class="chrono" id="chrono">
-           <button onclick='start'>Bonus 30 seconde</button>
+           <button onclick='bonus30s'>Bonus 30 seconde</button>
        </section> 
     </section>
     <script src='script.js'></script>
