--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     </section>
     <section class="bonus-container">
-       <section class="chrono" id="chrono">
-           <button onclick='bonus30s'>Bonus 30 seconde</button>
+       <section class="chrono">
+           <button id="chrono"></button>
        </section> 
     </section>
     <script src='script.js'></script>
