--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <title>Kirby Clicker</title>
 </head>
 <body>
+    <img class="game-over" src="images/game-over.jpg" alt="game over">
+    <div class="gif-retry">
+    <img src="images/game-over.gif" alt="gif game over">
+    <button>Try-Again</button>
+    </div>
+    
     <section class="main-container">
-
+        <button id="canvas">testeteste</button>
+        <div class="kirby-life">
+        <img class="hearth" src="images/hearth.gif_c200" alt="gif d'un coeur qui tourne">
+        <p class="game-life"></p>
+        </div>
     </section>
     <section class="bonus-container">
        <section class="chrono">
