--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img class="game-over" src="images/game-over.jpg" alt="game over">
     <div class="gif-retry">
     <img src="images/game-over.gif" alt="gif game over">
-    <button>Try-Again</button>
+    <button onclick="tryAgain()">Try-Again</button>
     </div>
     
     <section class="main-container">
