--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,58 @@
     <link rel="stylesheet" href="style.css">
     <title>Kirby Clicker</title>
 </head>
+
 <body>
     <section class="main-container">
+        <div id="cookie" onclick="cookieClick()">
+            <img src="./images/kirby.jpg" width="50px" />
+        </div>
+        <div id="numbers">0</div>
+        <div id="levelup"></div>
 
     </section>
     <section class="bonus-container">
-       <section class="chrono">
-           <button id="chrono"></button>
-       </section> 
+        <section class="chrono">
+            <button id="chrono"></button>
+            <section class=" multiplicateur ">
+                <ul>
+                    <div class ="bottom-fire">
+                    <button id="multiplicateur" onclick = "fire()">
+                        <li>Element feux</li>
+                        <li>X2</li>
+                        <li>30 étoiles</li>
+                    </button></div>
+                </ul>
+
+                <ul><div class = "bottom-water" onclick ="water()">
+                    <button id="multiplicateur">
+                        <li>Element eau </li>
+                        <li>X10</li>
+                        <li>500 étoiles</li>
+                    </button></div>
+                </ul>
+
+                <ul><div class ="bottom-frost"onclick ="frost()">
+                    <button id="multiplicateur">
+                        <li>Element glace </li>
+                        <li>X20</li>
+                        <li>1000 étoiles</li>
+                    </button></div>
+                </ul>
+
+                <ul><div class ="bottom-rainbow"onclick =rainbow()>
+                    <button id="multiplicateur">
+                        <li>Element arc-en-ciel </li>
+                        <li>X100</li>
+                        <li>10000 étoiles</li>
+                    </button></div>
+                </ul>
+            </section>
+        </section>
     </section>
+
+
     <script src='script.js'></script>
 </body>
+
 </html>
