--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <section class="main-container">
-
+        <div id="canvas" style="background-color: red; height: 200px; width: 200px; border-radius: 100px; position: absolute; transform: translate(-50%, -50%); left: 50%; top: 50%">
+            <div id="child"></div>
+        </div>
     </section>
     <section class="bonus-container">
-       <section class="chrono">
-           <button id="chrono"></button>
-       </section> 
+       
     </section>
     <script src='script.js'></script>
 </body>
