--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
                         <li>10000 étoiles</li>
                     </button></div>
                 </ul>
+                    <button class="autoclick" onclick="autoclicker()">AUTOCLICK
+                    </button>
+                <ul>
+
+                </ul>
             </section>
         </section>
 
