--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
                         <li>10000 étoiles</li>
                     </button></div>
                 </ul>
+
+                <ul><div class ="buyLife"onclick ="buyLife()">
+                    <button id="buyLifeButton">
+                        <li>Buy Life </li>
+                        <li>X1</li>
+                        <li>10 étoiles</li>
+                    </button></div>
+                </ul>
+
             </section>
         </section>
 
