--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <li>10000 étoiles</li>
                     </button></div>
                 </ul>
-                    <button class="autoclick" onclick="autoclicker()">AUTOCLICK
+                    <button id="autoclick" onclick="autoclicker()">AUTOCLICK
                     </button>
                 <ul>
 
