total score + best score

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                 <img class="hearth" src="images/hearth.gif_c200" alt="gif d'un coeur qui tourne">
                 <p class="game-life"></p>
                 </div>
+
+                <div class="score-container">
+                    <div class="best-score"><img src="images/best-score.gif"><p id="best-score">0</p></div>
+                    <div class="current-score"><img src="images/score.png"><p id="current-score">0</p></div>
+                </div>
     </section>
 
     <section class="bonus-container">
