--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 </ul>
                     <button id="autoclick" onclick="autoclicker()">AUTOCLICK
                     </button>
+                    <button id="bonusclick" onclick="bonusclicker()">BONUS AUTOCLICK</button>
                 <ul>
 
                 <ul><div class ="buyLife"onclick ="buyLife()">
