--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             </li>
                 <button id="autoclick" onclick="autoclicker()">AUTOCLICK
                 </button>
+                <button id="bonusclick" onclick="bonusclicker()">BONUS AUTOCLICK</button>
             <li>
 
             <li>
