All dound upload

--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
 
     <audio src="./sound/02 - Title.mp3" id="musicStart" loop="loop" autoplay="autoplay"></audio>
     <audio src="./sound/kirbyClick.wav" id="kirbyClick"></audio>
+    <audio src="./sound/curtainFall.wav" id="end"></audio>
+    <audio src="./sound/Game_Over.mp3" id="gameOverMusic"></audio>
     <audio src="./sound/miss.wav" id="miss"></audio>
+    <audio src="./sound/pointGain.wav" id="pointGain"></audio>
     <audio src="./sound/10 - Vegetable Valley _Intro_.mp3" id="musicFire" loop="loop" autoplay="autoplay"></audio>
     <audio src="./sound/04 - Ice Cream Island Map Screen.mp3" id="musicWater" loop="loop" autoplay="autoplay"></audio>
+    <audio src="./sound/08- Dream Fountain Scene.mp3" id="musicFrost" loop="loop" autoplay="autoplay"></audio>
+    <audio src="./sound/06_floatislands.mp3" id="musicRainbow" loop="loop" autoplay="autoplay"></audio>
 
 
 
@@ -104,11 +109,6 @@
             </li>
         </ul>
 
-                <!-- Sound button-->
-<!--                 <audio controls autoplay loop style="margin-top:20px">
-                    <source id="startMusic" src="./sound/02 - Title.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio> -->
                 
             </section>
 
