--- a/index.html
+++ b/index.html
@@ -62,54 +62,50 @@
                 <button id="chrono"></button>
             </li>
             <li>
-                <button class="button-fire" onclick="fire()">
-                    <div><img src="images/flame.png">BONUS x2</div>
+                <button class="button-fire disabled" onclick="fire()">
+                    <img src="images/flame.png"><div>BONUS x2</div>
                     <div class="price">30<img src="images/star.png"></div>
                 </button>
             </li>
 
             <li>
-                <button class="button-water" onclick="water()">
-                    <li>Element eau </li>
-                    <li>X5</li>
-                    <li>100 étoiles</li>
+                <button class="button-water disabled" onclick="water()">
+                    <img src="images/water-drop.png"><div>BONUS x5</div>
+                    <div class="price">100<img src="images/star.png"></div>
                 </button>
             </li>
 
             <li>
-                <button class="button-frost" onclick="frost()">
-                    <li>Element glace </li>
-                    <li>X10</li>
-                    <li>500 étoiles</li>
+                <button class="button-frost disabled" onclick="frost()">
+                    <img src="images/snowflake.png"><div>BONUS x10</div>
+                    <div class="price">500<img src="images/star.png"></div>
                 </button>
             </li>
 
             <li>
-                <button class="button-rainbow" onclick=rainbow()>
-                    <li>Element arc-en-ciel </li>
-                    <li>X30</li>
-                    <li>1000 étoiles</li>
+                <button class="button-rainbow disabled" onclick=rainbow()>
+                    <img src="images/rainbow.png"><div>BONUS x30</div>
+                    <div class="price">1000<img src="images/star.png"></div>
                 </button>
             </li>
-                <button id="autoclick" onclick="autoclicker()">AUTOCLICK
-                </button>
-                <button id="bonusclick" onclick="bonusclicker()">BONUS AUTOCLICK</button>
+
             <li>
+                <button id="autoclick" onclick="autoclicker()"><img src="images/hammer.png">AutoClick<div class="price">200<img src="images/star.png"></div></button>
+            </li>
+            <li>
+                <button id="bonusclick" onclick="bonusclicker()"><img class="arrow" src="images/arrow-green.png">AutoClick lvl Up<div class="price">1000<img src="images/star.png"></div></button>
+            </li>
 
             <li>
                     <button id="buyLifeButton" onclick="buyLife()">
-                        <li>Buy Life </li>
-                        <li>X1</li>
-                        <li>10 étoiles</li>
+                            <img src="images/hearth.gif_c200"><div>Life Pt. x1</div>
+                            <div class="price">1000<img src="images/star.png"></div>
                     </button>
             </li>
         </ul>
 
-                <!-- Sound button-->
-<!--                 <audio controls autoplay loop style="margin-top:20px">
-                    <source id="startMusic" src="./sound/02 - Title.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio> -->
+        <img src="images/kirby.png">
+        <p>DIE ♥</p>
                 
             </section>
 
